created eventApp.js, eventController.js, event.ng.html and domains folder

--- a/src/main/web-app/events.html
+++ b/src/main/web-app/events.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-ng-app="angularEventApp">
 <head>
 <meta charset="ISO-8859-1">
 <title>Create Upcoming Events</title>
@@ -10,9 +10,11 @@
 <link href="css/main-layout.css" type="text/css" rel="stylesheet" />
 
 <script src="libs/angularJS/1.2/angular.min.js"></script>
+<script src="js/angular/eventApps/EventApp.js"></script>
+<script src="js/angular/controller/eventController.js"></script>
 <script src="js/formValidation.js"></script>
-<script src="js/attendee.js"></script>
-<script src="js/event.js"></script>
+<script src="js/domains/attendee.js"></script>
+<script src="js/domains/event.js"></script>
 <script src="js/modifiedUpcomingEvents.js"></script>
 </head>
 
@@ -38,7 +40,7 @@
 		</div>
 	</div>
 
-	<div id="body-container" class="container-fluid">
+	<div ng-controller="eventControl" id="body-container" class="container-fluid">
 		<div class="row">
 			<div class="col-md-12">
 				<h1>
@@ -63,7 +65,7 @@
 		<form>
 			<div class="row">
 				<div class="col-md-1 col-md-offset-2">First Name:</div>
-				<div data-ng-app="" class="col-md-2 ">
+				<div class="col-md-2 ">
 					<input type="text" ng-model="firstNameInput" id="fname" placeholder="" class="input-space">
 				</div>
 				<div class="col-md-7 textb">
@@ -71,17 +73,17 @@
 				</div>
 			</div>
 			<br>
-			<div class="row">
+			<div  class="row">
 				<div class="col-md-1 col-md-offset-2">Last Name:</div>
 				<div data-ng-app="" class="col-md-2 ">
-					<input type="text" ng-model="lastNameInput" id="lname" placeholder="" class="input-space">
+					<input type="text" ng-model="lastNameInput" id="lname" class="input-space">
 				</div>
 				<div class="col-md-7 textb">
 					<p id="lastNameError"></p>
 				</div>
 			</div>
 			<br>
-			<div class="row">
+			<div  class="row">
 				<div class="col-md-1 col-md-offset-2 texta">Description:</div>
 				<div data-ng-app="" class="col-md-5">
 					<textarea ng-model="descriptionInput" id="description" rows="5" cols="70"></textarea>
@@ -91,7 +93,7 @@
 				</div>
 			</div>
 			<br> <br>
-			<div class="row">
+			<div  class="row">
 				<div class="col-md-1 col-md-offset-2 texta">Enter URL:</div>
 				<div data-ng-app="" class="col-md-3" style="width: 100">
 					<input type="text" ng-model="htmlInput" id="htmlLink" placeholder="Enter URL" size="35">
@@ -107,7 +109,7 @@
 				<div class="col-md-8"></div>
 			</div>
 			<br>
-			<div class="row">
+			<div  class="row">
 				<div data-ng-app="" class="col-md-3 col-md-offset-3 ">
 					<input type="checkbox" ng-model="checkBox1Input" id="checkBox1" name="1" id="checkBox1"> &nbsp;
 					Guests can invite other guests
@@ -115,7 +117,7 @@
 				<div class="col-md-6"></div>
 			</div>
 			<br>
-			<div class="row">
+			<div  class="row">
 				<div data-ng-app="" class="col-md-3 col-md-offset-3">
 					<input type="checkbox" ng-model="checkBox2Input" id="checkBox2" name="2" id="checkBox2"> &nbsp;
 					Guests can see other guests
@@ -133,7 +135,7 @@
 				<div class="col-md-9 col-md-offset-3">Street Address 1:</div>
 			</div>
 
-			<div class="row">
+			<div  class="row">
 				<div data-ng-app="" class="col-md-2 col-md-offset-3">
 					<input type="text" ng-model="street1Input" id="street1" placeholder="Event Address"
 						style="width: 150px;">
@@ -148,7 +150,7 @@
 					2:</div>
 				<div class="col-md-7"></div>
 			</div>
-			<div class="row">
+			<div  class="row">
 				<div data-ng-app="" class="col-md-2 col-md-offset-3">
 					<input type="text" ng-model="street2Input" id="street2" placeholder="Event Address"
 						style="width: 150px;">
@@ -165,13 +167,13 @@
 				<div class="col-md-1">Country:</div>
 				<div class="col-md-5"></div>
 			</div>
-			<div class="row">
+			<div  class="row">
 				<div class="col-md-1 col-md-offset-3">
-					<input type="text" id="city" placeholder="Denton" size="15">
+					<input type="text" ng-model="cityInput" id="city" placeholder="Denton" size="15">
 				</div>
 
 				<div class="col-md-1 spacing5">
-					<select id="states">
+					<select ng-model="statesInput" id="states">
 						<option value="">State</option>
 						<option value="AL">AL</option>
 						<option value="AK">AK</option>
@@ -227,11 +229,11 @@
 				</div>
 
 				<div class="col-md-1 ">
-					<input type="text"  id="zipcode" placeholder="76201" size="5">
+					<input type="text" ng-model="zipInput" id="zipcode" placeholder="76201" size="5">
 				</div>
 
 				<div class="col-md-1">
-					<select id="country">
+					<select ng-model="countryInput" id="country">
 						<option value="">Country</option>
 						<option value="United States">United States</option>
 						<option value="United Kingdom">United Kingdom</option>
@@ -255,9 +257,9 @@
 				<div class="col-md-2 textb">Event Start Time:</div>
 				<div class="col-md-5"></div>
 			</div>
-			<div class="row">
+			<div  class="row">
 				<div class="col-md-2 col-md-offset-3">
-					<select id="month">
+					<select ng-model="startMonthInput" id="month">
 						<option value=""></option>
 						<option value="01">01</option>
 						<option value="02">02</option>
@@ -271,7 +273,7 @@
 						<option value="10">10</option>
 						<option value="11">11</option>
 						<option value="12">12</option>
-					</select> / <select id="day">
+					</select> / <select ng-model="startDayInput" id="day">
 						<option value=""></option>
 						<option value="01">01</option>
 						<option value="02">02</option>
@@ -304,7 +306,7 @@
 						<option value="29">29</option>
 						<option value="30">30</option>
 						<option value="31">31</option>
-					</select> / <select id="year">
+					</select> / <select ng-model="startYearInput" id="year">
 						<option value=""></option>
 						<option value="2014">2014</option>
 						<option value="2015">2015</option>
@@ -314,7 +316,7 @@
 					</select>
 				</div>
 				<div class="col-md-3">
-					<select id="hour">
+					<select ng-model="startHourInput" id="hour">
 						<option value=""></option>
 						<option value="1">01</option>
 						<option value="2">02</option>
@@ -328,7 +330,7 @@
 						<option value="10">10</option>
 						<option value="11">11</option>
 						<option value="12">12</option>
-					</select> : <select id="minute">
+					</select>  <select ng-model="startMinuteInput" id="minute">
 						<option value=""></option>
 						<option value="0">00</option>
 						<option value="1">01</option>
@@ -391,7 +393,7 @@
 						<option value="58">58</option>
 						<option value="59">59</option>
 						<option value="60">60</option>
-					</select> &nbsp; <select id="clock">
+					</select> &nbsp; <select ng-model="startMeridiem" id="clock">
 						<option value=""></option>
 						<option value="am">A.M.</option>
 						<option value="pm">P.M.</option>
@@ -408,9 +410,9 @@
 				<div class="col-md-2 textb">Event End Time:</div>
 				<div class="col-md-5"></div>
 			</div>
-			<div class="row">
+			<div  class="row">
 				<div class="col-md-2 col-md-offset-3">
-					<select id="eMonth">
+					<select ng-model="endMonthDay" id="eMonth">
 						<option value=""></option>
 						<option value="01">01</option>
 						<option value="02">02</option>
@@ -424,7 +426,7 @@
 						<option value="10">10</option>
 						<option value="11">11</option>
 						<option value="12">12</option>
-					</select> / <select id="eDay">
+					</select> / <select ng-model="endDayInput" id="eDay">
 						<option value=""></option>
 						<option value="01">01</option>
 						<option value="02">02</option>
@@ -457,7 +459,7 @@
 						<option value="29">29</option>
 						<option value="30">30</option>
 						<option value="31">31</option>
-					</select> / <select id="eYear">
+					</select> / <select ng-model="endYearInput" id="eYear">
 						<option value=""></option>
 						<option value="2014">2014</option>
 						<option value="2015">2015</option>
@@ -467,7 +469,7 @@
 					</select>
 				</div>
 				<div class="col-md-3">
-					<select id="eHour">
+					<select ng-model="endHourInput" id="eHour">
 						<option value=""></option>
 						<option value="1">01</option>
 						<option value="2">02</option>
@@ -481,7 +483,7 @@
 						<option value="10">10</option>
 						<option value="11">11</option>
 						<option value="12">12</option>
-					</select> : <select id="eMinute">
+					</select> : <select ng-model="endMinuteInput" id="eMinute">
 						<option value=""></option>
 						<option value="0">00</option>
 						<option value="1">01</option>
@@ -544,7 +546,7 @@
 						<option value="58">58</option>
 						<option value="59">59</option>
 						<option value="60">60</option>
-					</select> &nbsp; <select id="eClock">
+					</select> &nbsp; <select ng-model="endMeridiemInput" id="eClock">
 						<option value=""></option>
 						<option value="am">A.M.</option>
 						<option value="pm">P.M.</option>
@@ -570,12 +572,12 @@
 				<div class="col-md-2 col-md-offset-3">First Name:</div>
 				<div class="col-md-7"></div>
 			</div>
-			<div class="row">
+			<div  class="row">
 				<div class="col-md-2 col-md-offset-3">
-					<input type="text" id="attendeeFirstName" placeholder="First Name"/>
+					<input type="text" ng-model="attendeeFirstNameInput" id="attendeeFirstName" placeholder="First Name"/>
 				</div>
 				<div class="col-md-7">
-					<p id="attendeeFError"></p>
+					<p id="attendeeFError"></span></p>
 				</div>
 			</div>
 			<br>
@@ -583,9 +585,9 @@
 				<div class="col-md-2 col-md-offset-3">Last Name:</div>
 				<div class="col-md-7"></div>
 			</div>
-			<div class="row">
+			<div  class="row">
 				<div class="col-md-2 col-md-offset-3">
-					<input type="text" id="attendeeLastName" placeholder="Last Name" />
+					<input type="text" ng-model="attendeeLastNameInput" id="attendeeLastName" placeholder="Last Name" />
 				</div>
 				<div class="col-md-7">
 					<p id="attendeeLError"></p>
@@ -595,9 +597,9 @@
 			<div class="row">
 				<div class="col-md-2 col-md-offset-3">Attendee Email:</div>
 			</div>
-			<div class="row">
+			<div  class="row">
 				<div class="col-md-3 col-md-offset-3">
-					<input type="text" id="attendeeEmail"
+					<input type="text" id="attendeeEmail" ng-model="attendeeEmailInput"
 						placeholder="johnnyappleseed@example.com" size="35" />
 				</div>
 				<div class="col-md-6">
