--- a/src/main/webapp/events.html
+++ b/src/main/webapp/events.html
@@ -42,7 +42,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<h1>
-					<u>Plan Upcoming Events!</u>
+					<u>Plann Upcoming Events!</u>
 				</h1>
 			</div>
 		</div>
