--- a/src/main/webapp/events.ng.html
+++ b/src/main/webapp/events.ng.html
@@ -35,7 +35,7 @@
 				</span> <span style="margin-right: 10px; text-align: left;"> <a
 					href="signup.html"> Sign Up! </a>
 				</span> <span style="margin-right: 10px; text-align: left;"> <a
-					href="events.html"> Upcoming Events! </a>
+					href="events.ng.html"> Upcoming Events! </a>
 				</span>
 			</div>
 		</div>
@@ -329,7 +329,7 @@
 							<option value="10">10</option>
 							<option value="11">11</option>
 							<option value="12">12</option>
-						</select> <select ng-model="startMinuteInput" id="minute">
+						</select> : <select ng-model="startMinuteInput" id="minute">
 							<option value=""></option>
 							<option value="0">00</option>
 							<option value="1">01</option>
@@ -569,7 +569,7 @@
 						<p id="top-error"></p>
 					</div>
 				</div>
-				<div class=row>
+				<div class="row">
 					<div class="col-md-2 col-md-offset-3">First Name:</div>
 					<div class="col-md-7"></div>
 				</div>
@@ -613,8 +613,7 @@
 				<br>
 				<div class="row">
 					<div class="col-md-2 col-md-offset-3">
-						<button type="submit" id="attendeeButton" onclick="addAttendee()">Add
-							Attendee</button>
+						<button type="submit" id="attendeeButton" onclick="addAttendee()">Add Attendee</button>
 					</div>
 					<div class="col-md-7"></div>
 				</div>
@@ -627,7 +626,6 @@
 				<div class="row">
 					<div class="col-md-4 col-md-offset-3">
 						<table border=1 id="attendeeTable" style="width: 500px">
-
 							<tr>
 								<td><b>#</b></td>
 								<td><b>Name</b></td>
