--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -26,7 +26,7 @@
 				</span> <span style="margin-right: 10px; text-align: left;"> <a
 					href="signup.html"> Sign Up! </a>
 				</span> <span style="margin-right: 10px; text-align: left;"> <a
-					href="events.html"> Upcoming Events! </a>
+					href="events.ng.html"> Upcoming Events! </a>
 				</span>
 			</div>
 		</div>
