Updated links and general review of events.ng.html page, added protractor files, added angular.min.js

--- a/src/main/webapp/events.ng.html
+++ b/src/main/webapp/events.ng.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html data-ng-app="angularEventApp">
 <head>
-<meta charset="ISO-8859-1">
 <title>Create Upcoming Events</title>
 
 <link href="libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css"
@@ -19,7 +18,7 @@
 <script src="js/modifiedUpcomingEvents.js"></script>
 </head>
 
-<body>
+<body ng-app>
 	<div id="header-container" class="container-fluid">
 		<div class="row">
 			<div class="col-md-12">Header</div>
