--- a/src/main/webapp/eventResults.ng.html
+++ b/src/main/webapp/eventResults.ng.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html data-ng-app="angularEventApp">
 <head>
-<meta charset="ISO-8859-1">
 <title>Main Page: My Family</title>
 
 <link href="libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css"
 	rel="stylesheet" type="text/css" />
 <link href="css/index.css" type="text/css" rel="stylesheet" />
 <link href="css/main-layout.css" type="text/css" rel="stylesheet" />
+<script src="libs/angularJS/1.2/angular.min.js"></script>
+
+
 </head>
 <body>
 	<div id="header-container" class="container-fluid">
@@ -34,16 +36,14 @@
 
 	<div ng-controller="eventController" id="body-container" class="container-fluid">
 		<div class="row">
-			<div class="col-md-12">
-				<div class="row">
-					<div id="main-view-container">
-						<div class="row">
-							<div class="col-md-2 col-md-offset-2 align-left">
-								test
-							</div>
-						</div>
-					</div>
-				</div>
+			<div ng-app="" class="col-md-2 col-md-offset-2 align-left">
+				<div ng-app="">
+ 
+<p>Input something in the input box:</p>
+<p>Name: <input type="text" ng-model="name" value="John"></p>
+<p ng-bind="name"></p>
+
+</div>
 			</div>
 		</div>
 	</div>
