--- a/src/main/webapp/angularTest2.html
+++ b/src/main/webapp/angularTest2.html
@@ -1,17 +1,3 @@
-<!DOCTYPE html>
-<!--
-
--->
-<html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="windows-1252">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div ng-app="testApp" ng-controller="testController">
-            <p>Name: <input type="text" ng-model="name"></p>
-            <button ng-onClick="newPage()">Click Me</button>
-        </div>
-    </body>
-</html>
+<div class="row">
+    <p>Test2</p>
+</div>
