--- a/src/main/webapp/route1.html
+++ b/src/main/webapp/route1.html
@@ -1,4 +1,6 @@
 <h1>Route 1</h1>
 <hr/>
-<a ui-sref=".list">Show List</a>
-<div ui-view></div>
+<div ui-view>
+	<input type="text" ng-model="nameField">
+	<button ng-click="setText()"><a ui-sref="route2">Route 2</a></button>
+</div>
