Fixed example.  You have to use JS Object instead of String literals.

--- a/src/main/webapp/index_1.html
+++ b/src/main/webapp/index_1.html
@@ -9,7 +9,7 @@
     <body class="container">
         <div class="navbar">
             <div class="navbar-inner">
-                <a class="brand" href="#">Start</a>
+                <a class="brand" ui-sref="route1">Start</a>
                 <ul  class="nav">
                     <li><a ui-sref="route1">Route 1</a></li>
                     <li><a ui-sref="route2">Route 2</a></li>
