--- a/src/main/webapp/route1.html
+++ b/src/main/webapp/route1.html
@@ -1,6 +1,7 @@
 <h1>Route 1</h1>
 <hr/>
-<div ui-view>
-	<input type="text" ng-model="nameField">
-	<button ng-click="setText()"><a ui-sref="route2">Route 2</a></button>
-</div>
+
+<form ng-submit="submit()">
+    <input type="text" ng-model="user.name">
+    <input type="submit" id="submit" value="Submit" />
+</form>
