Finished Display of Event on results page

--- a/src/main/webapp/eventResults.ng.html
+++ b/src/main/webapp/eventResults.ng.html
@@ -2,7 +2,15 @@
 <hr/>
 <p>Event name: {{eventName}}.</p>
 <p>Event desc: {{eventDescription}}.</p>
+<p>Event checkbox1: {{eventCheckbox1}}. </p>
+<p>Event checkbox1: {{eventCheckbox2}}. </p>
 <p>Event address1: {{eventAddress1}}</p>
 <p>Event address2: {{eventAddress2}}</p>
 <p>Event city: {{eventCity}}</p>
 <p>Event state: {{eventState}}</p>
+<p>Event zip: {{eventZip}}</p>
+<p>Event country: {{eventCountry}}</p>
+<p>Event start date: {{eventStartMonth}}/{{eventStartDay}}/{{eventStartYear}}</p>
+<p>Event start Time: {{eventStartHour}}:{{eventStartMinute}} {{eventStartMeridiem}}</p>
+<p>Event end date: {{eventEndMonth}}/{{eventEndDay}}/{{eventEndYear}}</p>
+<p>Event end Time: {{eventEndHour}}:{{eventEndMinute}} {{eventEndMeridiem}}</p>
