--- a/src/main/webapp/events.ng.html
+++ b/src/main/webapp/events.ng.html
@@ -62,7 +62,7 @@
 			<br>
 			<div class="row">
 				<div data-ng-app="" class="col-md-3 col-md-offset-3 ">
-					<input type="checkbox" ng-model="checkBox1Input" id="checkBox1"
+					<input type="checkbox" ng-model="event.checkbox1" id="checkBox1"
 						name="1" id="checkBox1"> &nbsp; Guests can invite other
 					guests
 				</div>
@@ -71,7 +71,7 @@
 			<br>
 			<div class="row">
 				<div data-ng-app="" class="col-md-3 col-md-offset-3">
-					<input type="checkbox" ng-model="checkBox2Input" id="checkBox2"
+					<input type="checkbox" ng-model="event.checkbox2" id="checkBox2"
 						name="2" id="checkBox2"> &nbsp; Guests can see other
 					guests
 				</div>
@@ -182,12 +182,12 @@
 				</div>
 
 				<div class="col-md-1 ">
-					<input type="text" ng-model="zipInput" id="zipcode"
+					<input type="text" ng-model="event.zip" id="zipcode"
 						placeholder="76201" size="5">
 				</div>
 
 				<div class="col-md-1">
-					<select ng-model="countryInput" id="country">
+					<select ng-model="event.country" id="country">
 						<option value="">Country</option>
 						<option value="United States">United States</option>
 						<option value="United Kingdom">United Kingdom</option>
@@ -213,7 +213,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-2 col-md-offset-3">
-					<select ng-model="startMonthInput" id="month">
+					<select ng-model="event.startMonth" id="month">
 						<option value=""></option>
 						<option value="01">01</option>
 						<option value="02">02</option>
@@ -227,7 +227,7 @@
 						<option value="10">10</option>
 						<option value="11">11</option>
 						<option value="12">12</option>
-					</select> / <select ng-model="startDayInput" id="day">
+					</select> / <select ng-model="event.startDay" id="day">
 						<option value=""></option>
 						<option value="01">01</option>
 						<option value="02">02</option>
@@ -260,7 +260,7 @@
 						<option value="29">29</option>
 						<option value="30">30</option>
 						<option value="31">31</option>
-					</select> / <select ng-model="startYearInput" id="year">
+					</select> / <select ng-model="event.startYear" id="year">
 						<option value=""></option>
 						<option value="2014">2014</option>
 						<option value="2015">2015</option>
@@ -270,7 +270,7 @@
 					</select>
 				</div>
 				<div class="col-md-3">
-					<select ng-model="startHourInput" id="hour">
+					<select ng-model="event.startHour" id="hour">
 						<option value=""></option>
 						<option value="1">01</option>
 						<option value="2">02</option>
@@ -284,7 +284,7 @@
 						<option value="10">10</option>
 						<option value="11">11</option>
 						<option value="12">12</option>
-					</select> : <select ng-model="startMinuteInput" id="minute">
+					</select> : <select ng-model="event.startMinute" id="minute">
 						<option value=""></option>
 						<option value="0">00</option>
 						<option value="1">01</option>
@@ -347,7 +347,7 @@
 						<option value="58">58</option>
 						<option value="59">59</option>
 						<option value="60">60</option>
-					</select> &nbsp; <select ng-model="startMeridiemInput" id="clock">
+					</select> &nbsp; <select ng-model="event.startMeridiem" id="clock">
 						<option value=""></option>
 						<option value="am">A.M.</option>
 						<option value="pm">P.M.</option>
@@ -367,7 +367,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-2 col-md-offset-3">
-					<select ng-model="endMonthDay" id="eMonth">
+					<select ng-model="event.endMonth" id="eMonth">
 						<option value=""></option>
 						<option value="01">01</option>
 						<option value="02">02</option>
@@ -381,7 +381,7 @@
 						<option value="10">10</option>
 						<option value="11">11</option>
 						<option value="12">12</option>
-					</select> / <select ng-model="endDayInput" id="eDay">
+					</select> / <select ng-model="event.endDay" id="eDay">
 						<option value=""></option>
 						<option value="01">01</option>
 						<option value="02">02</option>
@@ -414,7 +414,7 @@
 						<option value="29">29</option>
 						<option value="30">30</option>
 						<option value="31">31</option>
-					</select> / <select ng-model="endYearInput" id="eYear">
+					</select> / <select ng-model="event.endYear" id="eYear">
 						<option value=""></option>
 						<option value="2014">2014</option>
 						<option value="2015">2015</option>
@@ -424,7 +424,7 @@
 					</select>
 				</div>
 				<div class="col-md-3">
-					<select ng-model="endHourInput" id="eHour">
+					<select ng-model="event.endHour" id="eHour">
 						<option value=""></option>
 						<option value="1">01</option>
 						<option value="2">02</option>
@@ -438,7 +438,7 @@
 						<option value="10">10</option>
 						<option value="11">11</option>
 						<option value="12">12</option>
-					</select> : <select ng-model="endMinuteInput" id="eMinute">
+					</select> : <select ng-model="event.endMinute" id="eMinute">
 						<option value=""></option>
 						<option value="0">00</option>
 						<option value="1">01</option>
@@ -501,7 +501,7 @@
 						<option value="58">58</option>
 						<option value="59">59</option>
 						<option value="60">60</option>
-					</select> &nbsp; <select ng-model="endMeridiemInput" id="eClock">
+					</select> &nbsp; <select ng-model="event.endMeridiem" id="eClock">
 						<option value=""></option>
 						<option value="am">A.M.</option>
 						<option value="pm">P.M.</option>
