removed needless files

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="myFamilyApp" ng-controller="eventController">
+<html ng-app="myFamilyApp" ng-controller="newEventController">
 <head>
 <meta charset="ISO-8859-1">
 <title>Main Page: My Family</title>
